# Algo

./: README.md
Intro/: hello  hello.cpp
car/: a.out  share  share.cpp
week1/build_the_sum/: sum  sum.cpp
week1/dominoes/: a.out  domino  domino.cpp
week1/even_matrices/: matrix  matrix.cpp
week1/even_pairs/: even  even.cpp
week1/pow/: deck  deck.cpp
week10/defensive_line/: a.out  b.out  line.cpp  test.cpp
week10/light/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  lux  lux.cpp  test  test.cpp
week10/moving_books/: books  books.cpp
week10/public/: india  india.cpp  lol
week10/return_of_the_jedi/: force.cpp  jedi.cpp
week11/DHL/: a.out  dhl  dhl.cpp  try  try.cpp
week11/evolution/: evo  evo2.cpp
week11/goldeneye/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eye  eye.cpp
week11/strikesback/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fett  fett.cpp
week11/surveillance/: photo  photo.cpp
week12/clues/: CMakeCache.txt  CMakeLists.txt  Makefile  cfg  cmake_install.cmake  lol  sherlock  sherlock.cpp  sherlock2.cpp  sherlock3.cpp
week12/legions/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  roman  roman.cpp
week12/magician_coin/: coin  coin.cpp
week12/public/: a.out  game.cpp  lol  test.cpp
week12/tourofgaul/: a.out  gaul  gaul.cpp
week13/bobsburden/: a.out  bob  bob.cpp
week13/corbusier/: corb  corb.cpp
week13/sith/: darth  (+5 more)
week3/antenna/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  antenna.cpp  cmake_install.cmake  out
(+158 files in other folders)
